	* fix for BUG#412: tidy up bootparams code
	* fix for BUG#412: use macros for ldap_get_option calls
	* fix for BUG#412: better debugging of NSS status codes
	* fix for BUG#412: rewrite and abstract Kerberos support
	* fix for BUG#412: allow runtime configuration of LDAP
	  configuration file and keytab using environment
	* fix for BUG#412: correctly clamp max sleep time

265	Luke Howard <lukeh@padl.com>

	* fix for BUG#132: add versioning information to binary
	* fix for BUG#403: add AM_MAINTAINER_MODE
	* fix for BUG#388: bad LDAP query for ether lookups
	* fix for BUG#391: clarify bind timelimit defaults
	  in ldap.conf
	* fix for BUG#392: call do_close() if ldap_result()
	  or ldap_parse_result() fails (before returning
	  NSS_UNAVAIL)
	* fix for BUG#401: FreeBSD thread library check
	* fix for BUG#409: deallocate context in
	  _nss_ldap_ent_context_release() to avoid bad usage
	* fix for BUG#410: don't leak file descriptors in
	  _nss_ldap_readconfig

264	Luke Howard <lukeh@padl.com>

	* fix for BUG#378: MAP_H_ERRNO() should map NSS_TRYAGAIN
	  to NETDB_INTERNAL not TRY_AGAIN
	* fix for BUG#379: ldaps:// URIs only work if "ssl on"
	  is set
	* fix for BUG#248: nss_ldap exposes malformed entries
	  to the system

263	Luke Howard <lukeh@padl.com>

	* fix for BUG#374: nss_ldap returns success from
	  setnetgrent() when the requested netgroup doesn't
	  exist
	* fix for BUG#376: getXXent() only returns NULL once
	  before implicitly calling setXXent(), whereas other
	  backends continue to return NULL (Red Hat BUG#466794)

262	Luke Howard <lukeh@padl.com>

	* fix for BUG#370: nss_ldap fails to work on Solaris
	  without that patch applied

261	Luke Howard <lukeh@padl.com>

	* fix for Debian BUG#486778: ldap.conf template is
	  missing a comment in the first line

260	Luke Howard <lukeh@padl.com>

	* patch from Ralf Haferkamp <rhafer@suse.de>:
	  only set errno for NSS_TRYAGAIN

259	Luke Howard <lukeh@padl.com>

	* fix for BUG#348: fix memory leak